2019-05-03 Nicola Di Lieto <nicola.dilieto@gmail.com>
	* Release 1.0.8
	- added OpenSSL support (./configure --with-openssl)
	- check libraries versions at both compile and run time

2019-04-29 Nicola Di Lieto <nicola.dilieto@gmail.com>
	* Release 1.0.7
	- added HTTP User-Agent: header to all requests
	- added --disable-docs configure option
	- manpage version now updated automatically

2019-04-27 Nicola Di Lieto <nicola.dilieto@gmail.com>
	* Release 1.0.6
	- fix uninitialized variable in authorize()

2019-04-27 Nicola Di Lieto <nicola.dilieto@gmail.com>
	* Release 1.0.5
	- add AM_MAINTAINER_MODE to configure.ac
	- minor cosmetic change to json primitive dump

2019-04-26 Nicola Di Lieto <nicola.dilieto@gmail.com>
	* Release 1.0.4
	- debian packaging
	- fix potential uninitialized var access in acme_get()
	- fix fprintf format string in _json_dump()
	- copy doc/index.html on demand only

2019-04-25 Nicola Di Lieto <nicola.dilieto@gmail.com>
	* Release 1.0.3
	- fixed more -pedantic gcc warnings
	- html manpage in html5; copy as doc/html for github hosting

2019-04-24 Nicola Di Lieto <nicola.dilieto@gmail.com>
	* Release 1.0.2
	- allow choosing between GnuTLS and mbedTLS at compile time
	- improved directory existence check
	- fixed -Wall -pedantic gcc warnings

2019-04-21 Nicola Di Lieto <nicola.dilieto@gmail.com>
	* Release 1.0.1
	- fix acme challenge web server path
	- fix spelling in help text

2019-04-21 Nicola Di Lieto <nicola.dilieto@gmail.com>
	* First public release (1.0)