@@ -2,12 +2,12 @@
 .\"     Title: uacme
 .\"    Author: [see the "AUTHOR" section]
 .\" Generator: DocBook XSL Stylesheets v1.78.1 <http://docbook.sf.net/>
-.\"      Date: 05/03/2019
+.\"      Date: 05/04/2019
 .\"    Manual: User Commands
 .\"    Source: uacme 1.0.8
 .\"  Language: English
 .\"
-.TH "UACME" "1" "05/03/2019" "uacme 1\&.0\&.8" "User Commands"
+.TH "UACME" "1" "05/04/2019" "uacme 1\&.0\&.8" "User Commands"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -269,6 +269,11 @@ Success
 .RE
 .PP
 \fB1\fR
+.RS 4
+Certificate not reissued because it is still current
+.RE
+.PP
+\fB2\fR
 .RS 4
 Failure (syntax or usage error; configuration error; processing failure; unexpected error)\&.
 .RE
