@@ -1079,6 +1079,14 @@ The key authorization (for <strong>dns-01</strong> already converted
 </dt>
 <dd>
 <p>
+    Certificate not reissued because it is still current
+</p>
+</dd>
+<dt class="hdlist1">
+<strong>2</strong>
+</dt>
+<dd>
+<p>
     Failure (syntax or usage error; configuration error;
     processing failure; unexpected error).
 </p>
@@ -1192,7 +1200,7 @@ along with this program.  If not, see <a href="http://www.gnu.org/licenses/">htt
 <div id="footer-text">
 Version 1.0.8<br>
 Last updated
- 2019-05-02 15:28:46 CEST
+ 2019-05-04 15:11:18 CEST
 </div>
 </div>
 </body>
