@@ -1,7 +1,8 @@
-2019-05-03 Nicola Di Lieto <nicola.dilieto@gmail.com>
+2019-05-04 Nicola Di Lieto <nicola.dilieto@gmail.com>
 	* Release 1.0.8
 	- added OpenSSL support (./configure --with-openssl)
 	- check libraries versions at both compile and run time
+	- exit codes: 0=success, 1=cert issuance skipped, 2=error
 
 2019-04-29 Nicola Di Lieto <nicola.dilieto@gmail.com>
 	* Release 1.0.7
